// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField when layout is horizontal renders FormField with appropriate for horizontal layout styles and classNames 1`] = `
<div>
  <div
    class="flex-1 box-border [&_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
  >
    <style>
      html {
  box-sizing: initial;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0;
  background-color: #fff;
}
@media print {
  body {
    background-color: #fff;
  }
}
#root {
  display: flex;
  flex: 1;
}

    </style>
    <div
      class="text-[1rem] [&+&]:mt-4 grid w-full gap-x gap-y grid-rows grid-cols-[calc(4.25rem*var(--form-label [grid-template xs:[--form-label-width:var(--form-label-width- sm:[--form-label-width:var(--form-label-width- md:[--form-label-width:var(--form-label-width- lg:[--form-label-width:var(--form-label-width- xl:[--form-label-width:var(--form-label-width-"
      data-field-has-error="false"
      style="--form-label-width: 3;"
    >
      <input />
    </div>
  </div>
</div>
`;

exports[`FormField when layout is horizontal when labelWidth is 4 renders FormField with appropriate for horizontal layout styles and classNames 1`] = `
<div>
  <div
    class="flex-1 box-border [&_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
  >
    <style>
      html {
  box-sizing: initial;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0;
  background-color: #fff;
}
@media print {
  body {
    background-color: #fff;
  }
}
#root {
  display: flex;
  flex: 1;
}

    </style>
    <div
      class="text-[1rem] [&+&]:mt-4 grid w-full gap-x gap-y grid-rows grid-cols-[calc(4.25rem*var(--form-label [grid-template xs:[--form-label-width:var(--form-label-width- sm:[--form-label-width:var(--form-label-width- md:[--form-label-width:var(--form-label-width- lg:[--form-label-width:var(--form-label-width- xl:[--form-label-width:var(--form-label-width-"
      data-field-has-error="false"
      style="--form-label-width: 4;"
    >
      <input />
    </div>
  </div>
</div>
`;

exports[`FormField when layout is vertical renders FormField with appropriate for vertical layout styles and classNames 1`] = `
<div>
  <div
    class="flex-1 box-border [&_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
  >
    <style>
      html {
  box-sizing: initial;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0;
  background-color: #fff;
}
@media print {
  body {
    background-color: #fff;
  }
}
#root {
  display: flex;
  flex: 1;
}

    </style>
    <div
      class="text-[1rem] [&+&]:mt-4"
      data-field-has-error="false"
    >
      <input />
    </div>
  </div>
</div>
`;
